--- a/youtube.html
+++ b/youtube.html
@@ -8,11 +8,11 @@
     <title>Youtube | Home</title>
 
     <link rel="stylesheet" href="youtube.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <style>
         * {
-            font-family: 'Roboto';
+            font-family: 'Roboto', Arial;
         }
 
         .search-bar {
@@ -30,81 +30,169 @@
             box-shadow: 3px 3px 5px rgba(184, 183, 183, 0.89);
         }
 
+        .video-list-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            column-gap: 8px;
+            row-gap: 16px;
+            padding: 20px;
+        }
+
         .card {
-            width: 300px;
-            display: inline-block;
-            vertical-align: top;
+            width: 100%;
+            padding: 5px;
         }
 
-        .thumbnail {
-            width: 300px;
-            display: block;
+        .vid-thumbnail {
+            width: 100%;
         }
 
-        .vid-info {
-            display: inline-grid;
-            gap: 3px;
+        .info-grid {
+            display: grid;
+            grid-template-columns: 40px 1fr;
+            gap: 10px;
+        }
+
+        .author-profile {
+            width: 100%;
+            border-radius: 30px;
+            margin-top: 15px;
+        }
+
+        p {
             margin-top: 0;
-        }
-
-        .author-profile {
-            grid-column-start: 1;
-            grid-column-end: 1;
-            margin-top: 12px;
-        }
-
-        .descp {
-            display: inline-block;
-            vertical-align: text-top;
-            margin-left: 10px;
-            grid-column-start: 2;
-            grid-column-end: 2;
-
-        }
-
-        .author-profile {
-            width: 40px;
-            margin-top: 10px;
-            border-radius: 40px;
-            display: inline-block;
+            margin-bottom: 0;
         }
 
         .vid-title {
-            font-size: 14px;
-            font-weight: bold;
-            width: auto;
+            font-weight: 500;
             line-height: 22px;
-            margin-top: 10px;
-            margin-bottom: 0;
         }
 
         .author,
         .stats {
             font-size: 13px;
-            line-height: 6px;
+            font-weight: 400;
             color: rgb(96, 96, 96);
+            line-height: 18px;
+        }
+
+        .author {
+            margin-top: 8px;
+        }
+
+
+        /* top bar flex box */
+        .top-nav-bar {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            height: 47px;
+        }
+
+        .left-flex {
+            display: flex;
+            align-items: center;
+            width: 150px;
+        }
+        .middle-flex {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex: 1;
+        }
+        .right-flex {
+            display: flex;
+            align-items: center;
+            width: 200px;
         }
     </style>
 
 </head>
 
 <body>
-    <input class="search-bar" type="text" placeholder="Search">
+    
+    <div class="top-nav-bar">
+        <div class="left-flex">
+            <img style="height: 24px; margin-inline: 24px;" src="/icons/hamburger-menu.svg" alt="">
+            <img style="height: 24px; " src="/icons/youtube-logo.svg" alt="">
+        </div>
 
-    <div class="card">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+        <div class="middle-flex">
+            <input class="search-bar" type="text" placeholder="Search">
+        </div>
+        <div class="right-flex">oammd</div>
+    </div>
 
-        <div class="vid-info">
-            <img class="author-profile"
-                src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
-            <div class="descp">
-                <p class="vid-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
-                <p class="author">Marques Brownlee</p>
-                <p class="stats">3.4M views &#183; 6 months ago</p>
+   
+    <div class="video-list-grid">
+        <div class="card">
+            <img class="vid-thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+            <div class="info-grid">
+                <img class="author-profile"
+                    src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
+
+                <div style="margin-top: 15px;">
+                    <p class="vid-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="vid-thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+            <div class="info-grid">
+                <img class="author-profile"
+                    src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
+
+                <div style="margin-top: 15px;">
+                    <p class="vid-title">Talking Tech and AI </p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="vid-thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+            <div class="info-grid">
+                <img class="author-profile"
+                    src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
+
+                <div style="margin-top: 15px;">
+                    <p class="vid-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="vid-thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+            <div class="info-grid">
+                <img class="author-profile"
+                    src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
+
+                <div style="margin-top: 15px;">
+                    <p class="vid-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img class="vid-thumbnail" src="thumbnails/thumbnail-1.webp" alt="">
+            <div class="info-grid">
+                <img class="author-profile"
+                    src="https://supersimple.dev/public/img/exercises/youtube/channel-profile-pics/channel-1.jpeg">
+
+                <div style="margin-top: 15px;">
+                    <p class="vid-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                    <p class="author">Marques Brownlee</p>
+                    <p class="stats">3.4M views &#183; 6 months ago</p>
+                </div>
             </div>
         </div>
     </div>
-    
 </body>
 
 </html>
