--- a/youtube.html
+++ b/youtube.html
@@ -29,47 +29,56 @@
             <input type="text" class="search-bar" placeholder="Search" id="">
             <button class="search-btn">
                 <img src="/icons/search.svg" alt="">
+                <div class="tooltip">
+                    Search
+                </div>
             </button>
             <button class="voice-search-btn">
                 <img src="/icons/voice-search-icon.svg" alt="">
+                <div class="tooltip">
+                    Voice Search
+                </div>
             </button>
         </div>
         <div class="right-flex">
             <img style="width: 24px;" src="icons/upload.svg" alt="">
             <img style="width: 24px;" src="icons/youtube-apps.svg" alt="">
-            <img style="width: 24px;" src="icons/notifications.svg" alt="">
+            <div class="notification-container">
+                <img style="width: 24px;" src="icons/notifications.svg" alt="">
+                <div class="notification-count">3</div>
+            </div>
             <img style="width: 24px;" src="icons/placeholder-dp.png" alt="">
         </div>
     </div>
 
     <div class="side-nav-bar">
         <div class="icon">
-            <img class="icon-img" src="icons/home.svg" alt="">
+            <img src="icons/home.svg" alt="">
             <p>Home</p>
         </div>
 
         <div class="icon">
-            <img class="icon-img" src="icons/explore.svg" alt="">
+            <img src="icons/explore.svg" alt="">
             <p>Explore</p>
         </div>
 
         <div class="icon">
-            <img class="icon-img" src="icons/subscriptions.svg" alt="">
+            <img src="icons/subscriptions.svg" alt="">
             <p>Subscriptions</p>
         </div>
 
         <div class="icon">
-            <img class="icon-img" src="icons/originals.svg" alt="">
+            <img src="icons/originals.svg" alt="">
             <p>Originals</p>
         </div>
 
         <div class="icon">
-            <img class="icon-img" src="icons/youtube-music.svg" alt="">
+            <img src="icons/youtube-music.svg" alt="">
             <p>YouTube Music</p>
         </div>
 
         <div class="icon">
-            <img class="icon-img" src="icons/library.svg" alt="">
+            <img src="icons/library.svg" alt="">
             <p>Library</p>
         </div>
 
