--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -21,20 +21,20 @@
 
     <div class="top-nav-bar">
         <div class="left-flex">
-            <img src="/icons/hamburger-menu.svg" class="hamburger-icon" alt="">
-            <img src="/icons/youtube-logo.svg" class="youtube-icon" alt="">
+            <img src="icons/hamburger-menu.svg" class="hamburger-icon" alt="">
+            <img src="icons/youtube-logo.svg" class="youtube-icon" alt="">
         </div>
 
         <div class="middle-flex">
             <input type="text" class="search-bar" placeholder="Search" id="">
             <button class="search-btn">
-                <img src="/icons/search.svg" alt="">
+                <img src="icons/search.svg" alt="">
                 <div class="tooltip">
                     Search
                 </div>
             </button>
             <button class="voice-search-btn">
-                <img src="/icons/voice-search-icon.svg" alt="">
+                <img src="icons/voice-search-icon.svg" alt="">
                 <div class="tooltip">
                     Voice Search
                 </div>
